Geoinformatics->Data Eng.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <br/>
                         <hr class="star-light">
 			<span class="skills">Data Science</span></br>
-			<span class="skills">GeoInformatics</span></br>
+			<span class="skills">Data Engineering</span></br>
                         <span class="skills">Web Development</span>
                     </div>
                 </div>
